--- a/css project/index.html
+++ b/css project/index.html
@@ -18,4 +18,16 @@
     </div>
     </div>
 </body>
+</html><!DOCTYPE html>
+<html>
+<head>
+<title>make a tea /title>
+ st[]   
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
 </html>
